--- a/css/02-components.css
+++ b/css/02-components.css
@@ -1065,8 +1065,8 @@ body:not([data-theme="dark"]) .career__role-icon .icon {
 
 .career__grid {
     display: grid;
-    /* Левая колонка (вакансии) чуть уже, правая (компании) чуть шире */
-    grid-template-columns: minmax(380px, 0.85fr) minmax(450px, 1.15fr);
+    /* Левая колонка (вакансии) занимает больше половины, правая (компании) уже */
+    grid-template-columns: minmax(420px, 1.3fr) minmax(320px, 0.7fr);
     gap: 3rem;
     align-items: start;
     grid-auto-rows: auto;
