--- a/css/00-variables.css
+++ b/css/00-variables.css
@@ -9,7 +9,7 @@
     --bg-tertiary: #1f3d68;
 
     /* Синие акцентные цвета САФУ */
-    --primary-blue: #5b9bf5;
+    --primary-blue: #4684ca;
     --primary-blue-light: #7db4ff;
     --primary-blue-dark: #1b3a6b;
     --accent-cyan: #38bdf8;
